Route Why added
Route why added

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,7 +7,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">generator-angular-fullstack</a>
+      <a href="/" class="navbar-brand">Jaw'Stat</a>
+      <img src="assets/images/Jaw_stat_logo.png" alt="I'm Jaw" width=14%>
     </div>
     <div uib-collapse="$ctrl.isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
