--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -3,6 +3,6 @@
     <a href="http://angular-fullstack.github.io/generator-angular-fullstack">Documentation</a> |
     <a href="https://gitter.im/DaftMonk/generator-angular-fullstack">Chat on Gitter</a> |
     <a href="https://github.com/angular-fullstack/generator-angular-fullstack/issues?state=open">Issues</a> |
-    <a href="https://opencollective.com/angular-fullstack">Donate to our Open Collective</a>
+    <a href="#">Developed by team 3</a>
   </p>
 </div>
