--- a/client/src/app/home/home.tpl.html
+++ b/client/src/app/home/home.tpl.html
@@ -1,31 +1,33 @@
-<div class="pure-g">
-    <div class="pure-u-1 text-center">
-        <h1>WELCOME TO JAWSTAT</h1>
+<div ng-controller="HomeCtrl">
+    <div class="pure-g">
+        <div class="pure-u-1 text-center">
+            <h1>WELCOME TO JAWSTAT</h1>
+        </div>
+        <div class="pure-u-1 text-center">
+            <h1>LOGO</h1>
+        </div>
+        <div class="pure-u-1-3">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aperiam dolore dolores eligendi in ipsum molestiae quaerat, quo rem? Culpa illo nam obcaecati quia voluptate. Dolor ex iure quibusdam voluptates.</p>
+        </div>
+        <div class="pure-u-1-3">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aperiam dolore dolores eligendi in ipsum molestiae quaerat, quo rem? Culpa illo nam obcaecati quia voluptate. Dolor ex iure quibusdam voluptates.</p>
+        </div>
+        <div class="pure-u-1-3">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aperiam dolore dolores eligendi in ipsum molestiae quaerat, quo rem? Culpa illo nam obcaecati quia voluptate. Dolor ex iure quibusdam voluptates.</p>
+        </div>
     </div>
-    <div class="pure-u-1 text-center">
-        <h1>LOGO</h1>
+    <br>
+    <div class="pure-g">
+        <div class="pure-u-1 text-center">
+            <br>
+            <button class="button-xlarge pure-button-primary pure-button" ng-click="goRedige()">RÉDIGER UNE FICHE CLIENT</button>
+            <br>
+        </div>
     </div>
-    <div class="pure-u-1-3">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aperiam dolore dolores eligendi in ipsum molestiae quaerat, quo rem? Culpa illo nam obcaecati quia voluptate. Dolor ex iure quibusdam voluptates.</p>
-    </div>
-    <div class="pure-u-1-3">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aperiam dolore dolores eligendi in ipsum molestiae quaerat, quo rem? Culpa illo nam obcaecati quia voluptate. Dolor ex iure quibusdam voluptates.</p>
-    </div>
-    <div class="pure-u-1-3">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aperiam dolore dolores eligendi in ipsum molestiae quaerat, quo rem? Culpa illo nam obcaecati quia voluptate. Dolor ex iure quibusdam voluptates.</p>
-    </div>
-</div>
-<br>
-<div class="pure-g">
+    <br>
     <div class="pure-u-1 text-center">
         <br>
-        <h1>REDIGER FICHE CLIENT</h1>
+        <h1>CONSULTER FICHE CLIENT</h1>
         <br>
     </div>
-</div>
-<br>
-<div class="pure-u-1 text-center">
-    <br>
-    <h1>CONSULTER FICHE CLIENT</h1>
-    <br>
 </div>
